--- a/CarRace/pom.xml
+++ b/CarRace/pom.xml
@@ -10,5 +10,25 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>CarRaceGame</artifactId>
+    <packaging>war</packaging>
+    <properties>
+        <!-- jstl的jar包版本号 -->
+        <jstl.version>1.2</jstl.version>
+    </properties>
 
+    <dependencies>
+        <!-- JSTL标签类 -->
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>${jstl.version}</version>
+        </dependency>
+
+        <!-- 引入framework的框架包 -->
+        <dependency>
+            <groupId>com.demo.spring</groupId>
+            <artifactId>framework</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
