--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,10 @@
 	<packaging>pom</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<modules>
-		<module>CarRace</module>
 		<module>Student</module>
 		<module>util</module>
 		<module>framework</module>
+		<module>redisDemo</module>
 	</modules>
 	<name>SpringMVC Maven Webapp</name>
 	<url>http://maven.apache.org</url>
