--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
 		<module>Student</module>
 		<module>util</module>
 		<module>framework</module>
+		<module>redisdemo</module>
 	</modules>
 	<name>SpringMVC Maven Webapp</name>
 	<url>http://maven.apache.org</url>
