--- a/redisdemo/pom.xml
+++ b/redisdemo/pom.xml
@@ -14,6 +14,8 @@
     <properties>
         <!-- jedis版本号 -->
         <jedis.version>2.9.0</jedis.version>
+        <!-- spring-data-redis版本号 -->
+        <spring.redis.version>1.8.0.RELEASE</spring.redis.version>
     </properties>
 
     <dependencies>
@@ -22,6 +24,12 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
             <version>${jedis.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>${spring.redis.version}</version>
         </dependency>
     </dependencies>
 </project>
