--- a/framework/pom.xml
+++ b/framework/pom.xml
@@ -24,6 +24,8 @@
         <slf4j.version>1.7.22</slf4j.version>
         <!-- log4j日志文件管理包版本号 -->
         <log4j.version>1.2.17</log4j.version>
+        <!-- 事务管理包版本号 -->
+        <aspectjweaver.version>1.8.8</aspectjweaver.version>
     </properties>
 
     <dependencies>
@@ -84,6 +86,13 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>${log4j.version}</version>
+        </dependency>
+
+        <!-- 事务管理包 -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectjweaver.version}</version>
         </dependency>
 
         <!-- junit测试包 -->
