--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,10 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<modules>
 		<module>Student</module>
-		<module>util</module>
 		<module>framework</module>
-		<module>redisdemo</module>
+		<!--<module>redisdemo</module>-->
 	</modules>
-	<name>SpringMVC Maven Webapp</name>
+	<name>SpringMVC</name>
 	<url>http://maven.apache.org</url>
 
 </project>
