--- a/Student/src/main/resources/jdbc.properties
+++ b/Student/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/test?serverTimezone=GMT
+url=jdbc:mysql://192.168.7.75:3306/test?serverTimezone=GMT
 username=root
 password=123456
 #定义初始连接数
